# blogsley-pony

./: .gitignore  DEV.md  Procfile  README.md  develop.py  docker-compose.yml  main.py  pyproject.toml  relay.py  requirements.txt  schema.gql  serve.py  setup.py  user_relay.py
admin/: .gitrepo  Dockerfile  README.md  lerna.json  netlify.toml  package.json  startdev.sh
admin/scripts/: deploy.js
blogsley/: __init__.py  message.py  resolver.py  security.py  version.py
blogsley/app/: __init__.py
blogsley/application/: __init__.py
blogsley/auth/: jwt.py  resolver.py
blogsley/command/: __init__.py  develop.py  (+4 more)
server/: Dockerfile  MANIFEST.in  app.json  develop.py  main.py  pyproject.toml  requirements.txt  schema.gql  serve.py  startdev.sh
server/blogsley/: __init__.py  __main__.py  model.py  version.py
server/blogsley/auth/: directive.py  jwt.py  resolver.py
server/blogsley/command/: develop.py  drop.py  group.py  populate.py  serve.py
server/blogsley/config/: __init__.py
server/blogsley/db/: __init__.py
server/blogsley/image/: __init__.py
server/blogsley/post/: __init__.py  entity.py  resolver.py  schema.py
server/blogsley/schema/: schemata.py
server/blogsley/user/: resolver.py
server/blogsley_setup/: develop.py  install.py
server/share/blogsley/: blogsley.db
server/share/blogsley/static/css/: 5.fc2db69d.css  chunk-common.fdd6f644.css
server/share/blogsley/static/js/: 12.47cddda2.js  14.7a5479fa.js  15.1bbbb80c.js  17.0f28c047.js  5.dcef58b2.js  6.99743dd0.js  7.ad417280.js  9.b279ace5.js  app.5de8612b.js  chunk-common.447891c5.js
(+168 files in other folders)
