[tool.poetry]
name = "blogsley"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.12.0"
uvicorn = "^0.12.3"
pony = "^0.7.14"
PyJWT = "^1.7.1"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
