[tool.poetry]
name = "blogsley"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.12.0"
pony = "^0.7.14"
PyJWT = "^2.4.0"
python-slugify = "^4.0.1"
psycopg2 = "^2.8.6"
uvicorn = {extras = ["standard"], version = "^0.12.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
